# sepl

./: ASM.hs  AST.hs  Assembler.hs  CPS.hs  CodeGenerator.hs  Debugger.hs  Interpreter.hs  Main.hs  Parser.hs  README.org  RunTests.hs  TestAssembler.hs  TestCPS.hs  TestCodeGenerator.hs  TestParser.hs  TestTypeChecker.hs  TypeChecker.hs  sepl.cabal
tests/: assign.bf  bug.bf  expressions.bf  flowControl.bf  funCalls.bf  io.bf  io.bf.in  io.h  syntax.bf
