Name:                sepl
Version:             0.0
Description:         simple compiler targeting brainfuck
License:             GPL-3
Author:              adamm@mimuw.edu.pl
Maintainer:          adamm@mimuw.edu.pl
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable RunTests
  Main-is:           RunTests.hs
  Build-Depends:     base, containers, array, mtl, EitherT,
                     parsec,
                     HUnit,
                     filepath, directory, process

Executable TestParser
  Main-is:           TestParser.hs
  Build-Depends:     base, containers, mtl,
                     parsec